got test to work

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
       lang="{{lang}}"
       formControlName="country" (ngModelChange)="getCountryName($event)"
       [startCountries]="['CA','US']" 
+      placeholder="something"
+      
           ></material2-country-select>      
 </form>
 <!-- <p>CountryName: {{countryName}}</p> -->
